# tmux-launcher

./: README.md  pyproject.toml
config/: ex_config.yaml
src/tmux_launcher/: __main__.py  tmux_launch.py
